--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+.App{
+    text-align: center;
+    margin: 16px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+div{
+    margin: 16px;
+    height: 90vh;
+    border-style: solid;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input{
+    padding: 10px;
+    margin-right: 8px;
+    border-radius: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ul{
+    list-style: none;
 }
 
-.App-link {
-  color: #61dafb;
+li{
+    text-align: left;
+    font-size: x-large;
+    margin-top: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.delete-button{
+    color: red;
+    border: none;
+    background-color: transparent;
+    font-size: large;
+    margin-left: 20px;
+}
+
+.add-button{
+    border-radius: 100%;
+    border-style: none;
+    background-color: blue;
+    color: white;
+    font-size: medium;
 }
